# JNI_Dynamic_Register

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/jni_dynamic_register/: MainActivity.java  TestNdk.java
app/src/main/jni/: native-lib.c
app/src/main/jni/include/: com_example_jni_dynamic_register_TestNdk.h
app/src/main/res/values/: strings.xml
